# yas

./: .gitignore  README.md  Taskfile.yml  cspell.json  taskfile.yaml
server/: .env  .env.example  .gitignore  Cargo.toml
server/bruno/: Create Session.bru  Delete Session.bru  Get Session.bru  bruno.json
server/bruno/Games/: Create Game.bru  Get Game Details.bru  Get Games In Group.bru  Get Scoreboard.bru  folder.bru
server/bruno/Groups/: Create Group.bru  Create Invite.bru  Get Group Details.bru  Get Group Members.bru
server/bruno/Invites/: Accept Invite.bru  Create Invite Code.bru  Get Group Invites.bru  Get Invite Details.bru  folder.bru
server/bruno/Matches/: Create Match.bru  folder.bru
server/bruno/Sessions/: Create Session.bru  Delete Session.bru  Get Session.bru
server/bruno/Stats/: Get Player Highlights.bru  Get User History.bru  Get User Summary.bru
server/bruno/Users/: Create User.bru  Get Current User Groups.bru  Get Current User.bru  Get User By ID.bru  Update Current User.bru
server/bruno/environments/: Development.bru
server/migrations/: 20260111155408_init_schema.sql  20260111171626_groups.sql  20260111181844_invites.sql  20260112215443_games.sql  20260114181853_match_index.sql  20260115002240_user_updates.sql  20260124200610_invite_names.sql  20260129230853_store_rank.sql  20260206225741_avatars.sql  20260207202207_delete_cascades.sql  20260211192418_game_metric.sql  20260214145827_role_rework.sql  20260215215519_email_verification.sql  20260217224830_session_versions.sql  20260225001430_password_resets.sql  20260225012642_hash_tokens.sql  20260227214912_medal_scores.sql  20260228161104_limit_invite_by_emails.sql  20260228182348_unique_token_hash_constraints.sql  20260301010616_invite_roles.sql  20260331161636_match_recorded_by.sql  20260331194412_min_max_player_counts.sql  20260521190629_seasons.sql  V1__setup.sql  V2__auth.sql  V3__groups.sql  V4__scoreboards.sql  V5__game_scores.sql
server/src/: constants.rs  error.rs  errors.rs  extractors.rs  main.rs  policies.rs
server/src/api/: me.rs  mod.rs
server/src/data/: common_passwords.txt
server/src/db/: postgres.rs
server/src/domains/: mod.rs
server/src/email_templates/: invite.html  reset_password.html  reset_password_complete.html
server/src/extractors/: auth.rs  auth_member.rs  auth_user.rs  guarded_member.rs  mod.rs  validated_json.rs  verified.rs  verified_member.rs  verified_user.rs
server/src/handlers/: auth.rs  game.rs  group.rs  (+5 more)
(+275 files in other folders)
