[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = "0.5.3"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
password-hash = { version = "0.5.0" }
rand = "0.8.5"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4", "array-impls"] }
validator = { version = "0.20.0", features = ["derive"] }
