[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# Database & Migrations
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid"] }

# Auth & Sessions
argon2 = "0.5" # Password hashing
tower-sessions = "0.10"
tower-sessions-sqlx-store = { version = "0.10", features = ["postgres"] }
tower = { version = "0.4", features =["util"] }
chrono = { version = "0.4.42", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"
tower-http = { version = "0.6.8", features = ["cors"] }
