[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# Database & Migrations
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid"] }

# Auth & Sessions
argon2 = "0.5" # Password hashing
tower-sessions = { version = "0.14", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tower = { version = "0.5", features =["util"] }

chrono = { version = "0.4.42", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
resend-rs = "0.21.0"
governor = "0.10.4"
sha256 = "1.6.0"
